# bpodemo

./: .gitattributes  .gitignore  README.md  eslint.config.js  index.html  mock-yardi-deploy.test.ts  package-lock.json  package.json  tauri.config.test.ts  vite.config.test.ts
automation-script/: Yardi-Automation.ts
automation-scripts/: Gmail-Agent.ts  Yardi-Automation.ts
docs/: architecture.md  file-map.md  sqlite-schema.sql
mock-yardi/: index.html
public/samples/: README.md  property-bank-import-sample.xlsx  yardi-ledger-sample.xlsx
scripts/: generate-samples.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: sqlite_storage.rs
src/components/: Ui.test.ts  Ui.tsx
src/domain/: month.test.ts  month.ts  reconciliation.test.ts  reconciliation.ts  seed.ts  types.ts
src/pages/: ApprovalPage.tsx  DashboardPage.tsx  ExceptionsPage.tsx  HistoryPage.tsx  MockYardiPage.tsx  PropertiesPage.tsx  ReconcilePage.tsx  ReportPage.tsx  SummaryPage.tsx  pageBehavior.test.ts  pageBehavior.ts
src/services/: desktop.test.ts  desktop.ts  fileImport.ts  mockFiles.ts  reports.ts
src/state/: AppStateContext.tsx
