[package]
name = "bpo_yardi_reconciliation"
version = "0.1.0"
description = "BPO Yardi reconciliation desktop application"
authors = ["BPO Finance Operations"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bpo_yardi_reconciliation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2.5.4"
rusqlite = { version = "0.32.1", features = ["bundled"] }
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.23.0"
